fix word wrapping

--- a/assets/less/comments.less
+++ b/assets/less/comments.less
@@ -18,6 +18,7 @@
 
   .comment-body {
     padding-right: 0.5rem;
+    word-wrap: break-word;
   }
 }
 
