--- a/assets/less/submissions.less
+++ b/assets/less/submissions.less
@@ -50,6 +50,7 @@
 }
 
 .submission-body {
+  word-wrap: break-word;
   padding-top: 1rem;
 }
 
